reflect-diagn (1.0) ; urgency=low

  * Improving test introduction.
  * Unique DiagnID field

 -- Alexey Fedoseev <aleksey@fedoseev.net>  Mon, 17 Dec 2012 16:00:00 +0400

reflect-diagn (1.0) ; urgency=low

  * First release.

 -- Alexey Fedoseev <aleksey@fedoseev.net>  Mon, 17 Dec 2012 16:00:00 +0400