@@ -1,7 +1,7 @@
 Package: reflect-diagn
 Priority: optional
 Section: misc
-Version: 1.1
+Version: 1.2
 Architecture: i386
 Installed-Size: 415
 Homepage: http://www.eduscen.ru/diagn/
