@@ -5,7 +5,7 @@ search1 = Марк:Твен:Приключения Гекльберри Финн
 search2 = Николай:Гоголь:Вечера на хуторе близ Диканьки
 add1 = Аркадий и Борис:Стругацкие:Жук в муравейнике
 search3 = Александр:Пушкин:Повести Белкина
-add2 = Marx:Carl:Capital
+add2 = Carl:Marx:Capital
 
 [Post]
 address = http://eduscen.ru/diagn/server/pushresults.cgi
